<resources>
    <string name="app_name">Diabetic Coma</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="come_on">Come On</string>
    <string name="sign_in">Sign In</string>
    <string name="join_now">Join Now</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up_using_your_email">Sign Up Using Your Email</string>

    <string name="name_must_bealphanumeric_text">Name must be alphanumeric text</string>
    <string name="phone_number_not_valid">Phone number not valid</string>


    <string name="sign_up_using_your_email_address">SIGN UP USING YOUR EMAIL ADDRESS</string>
    <string name="sign_up_error_message">Please check your email and password</string>
    <string name="sign_up_invalid_email_empty">Email field cannot be empty</string>
    <string name="sign_up_invalid_password">Password should be between 8 and 15 characters</string>
    <string name="sign_up_invalid_first_name">First name is mandatory</string>
    <string name="sign_up_invalid_last_name">Last name is mandatory</string>
    <string name="sign_up_invalid_email_wrong_format">Email address is written in wrong format</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="raspberry_pi_id">Raspberry PI ID</string>
    <string name="submit">Submit</string>
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="add">Add</string>
</resources>