<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/sign_up_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_up_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/sign_up_using_your_email"
                android:textColor="@color/pale_black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/first_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="16sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_title_tv"/>

            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/first_name_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_tv"/>

            <TextView
                android:id="@+id/last_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="16sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_et"/>

            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/last_name_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_tv"/>

            <TextView
                android:id="@+id/phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_et"/>

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="phone"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/phone_number_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_tv"/>

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="16sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_et"/>

            <EditText
                android:id="@+id/email_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_tv"/>

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintTop_toBottomOf="@+id/email_et"/>

            <EditText
                android:id="@+id/password_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/edit_text_border"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_tv"/>

            <TextView
                android:id="@+id/password_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/must_be_at_least_8_characters"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintTop_toBottomOf="@+id/password_et"/>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="0dp"
                android:layout_height="55dp"
                style="@style/blackBtnSelector"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/password_et"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
