<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_in_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:text="@string/sign_in_with_email"
                android:textColor="@color/pale_black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/email_address"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_title_tv" />

            <EditText
                android:id="@+id/sign_in_email_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_border"
                android:gravity="center_vertical|start"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintTop_toBottomOf="@+id/email_tv" />


            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_email_et" />

            <EditText
                android:id="@+id/sign_in_password_et"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_border"
                android:gravity="center_vertical|start"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintTop_toBottomOf="@+id/password_tv" />

            <Button
                android:id="@+id/sign_in_button_frag"
                style="@style/blackBtnSelector"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="25dp"
                android:enabled="true"
                android:text="@string/sign_in"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/email_tv"
                app:layout_constraintTop_toBottomOf="@id/sign_in_password_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
